--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "emoji-mart": "^2.11.1",
     "firebase": "^7.3.0",
+    "formik": "^2.0.3",
     "md5": "^2.2.1",
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
@@ -12,6 +13,7 @@
     "react-avatar-editor": "^11.0.7",
     "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
+    "react-jss": "^10.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
@@ -19,7 +21,8 @@
     "redux-devtools-extension": "^2.13.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
