--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^3.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "uuid": "^3.3.3",
